[CrOS Instant Tethering] Handle LAST_PROVISIONING_FAILED enum

A new change on the Android side now causes the phone to respond with
LAST_PROVISIONING_FAILED if the last attempt to run provisioning failed.
This CL addresses the case for when the device was offline last time it
checked, or there was some sort of network error when checking.

Bug: 872473
Change-Id: Ia28f9077990a5a991b3968a6da100222940c11be
Reviewed-on: https://chromium-review.googlesource.com/c/1357656
Commit-Queue: Regan Hsu <hsuregan@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#612909}(cherry picked from commit b53abe5da5aeb56b0feea1d376a9a2cb863ab4aa [formerly 4423cfde6d162b2296a00de2d271fb9fb47ed68e])
Reviewed-on: https://chromium-review.googlesource.com/c/1376715
Cr-Commit-Position: refs/branch-heads/3626@{#336}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: ecd68a86ddbb15c62d4c466e2f71d6e7e64ab72b